@@ -275,6 +275,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP7100 (EXPERIMENTAL)
        Canon PIXMA iP8100 (EXPERIMENTAL)
        Canon PIXMA iP8600 (EXPERIMENTAL)
+       Canon PIXMA iP9910 (EXPERIMENTAL)
        Canon PIXMA MP375R
        Canon PIXMA MP190  (EXPERIMENTAL)
        Canon PIXMA MP470  (EXPERIMENTAL)
